lib/sql/parse.js
/* eslint-disable */
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { body: peg$parsebody },
      peg$startRuleFunction  = peg$parsebody,

      peg$c0 = function(token, last) {
          token.push(last);
          var result = token.reduce(function(prev, pair){
              pair.forEach && pair.forEach(function(cur){
                  (cur.text != '') && prev[prev.length-1].push(cur);
                  cur.type === 'newline' && prev.push([]);
              });
              return prev;
          },[[]]);
          !result[result.length-1].length && result.pop();
          return {
              lint: lint(result),
              tokens: result
          }
      },
      peg$c1 = function(ws, token) {return ws.concat(token)},
      peg$c2 = function() {return {type: 'whitespace', text: text(), location: location()}},
      peg$c3 = function() {return {type: 'newline', text: text(), location: location()}},
      peg$c4 = function() {return {type: 'comment', text: text(), location: location()}},
      peg$c5 = function() {return {type:'literal', text: text(), location: location()}},
      peg$c6 = function(s) {return {type: 'system', text:s, location: location()}},
      peg$c7 = function(t) {return {type: 'globaltemp', text:t, location: location()}},
      peg$c8 = function(t) {return {type: 'temp', text:t, location: location()}},
      peg$c9 = function(v) {return {type: 'variable', text:v, location: location()}},
      peg$c10 = function(n) {return isKeyword(n) ? {type:'keyword', text:n, location: location()} : {type:'word', text:n, location: location()}},
      peg$c11 = function(p) {return {type:'paren', text:p, location: location()}},
      peg$c12 = function(o) {return {type:'operator', text:o, location: location()}},
      peg$c13 = "(",
      peg$c14 = peg$literalExpectation("(", false),
      peg$c15 = ")",
      peg$c16 = peg$literalExpectation(")", false),
      peg$c17 = "+",
      peg$c18 = peg$literalExpectation("+", false),
      peg$c19 = "-",
      peg$c20 = peg$literalExpectation("-", false),
      peg$c21 = ",",
      peg$c22 = peg$literalExpectation(",", false),
      peg$c23 = "=",
      peg$c24 = peg$literalExpectation("=", false),
      peg$c25 = "!=",
      peg$c26 = peg$literalExpectation("!=", false),
      peg$c27 = "<>",
      peg$c28 = peg$literalExpectation("<>", false),
      peg$c29 = "&",
      peg$c30 = peg$literalExpectation("&", false),
      peg$c31 = "<",
      peg$c32 = peg$literalExpectation("<", false),
      peg$c33 = "<=",
      peg$c34 = peg$literalExpectation("<=", false),
      peg$c35 = ">",
      peg$c36 = peg$literalExpectation(">", false),
      peg$c37 = ">=",
      peg$c38 = peg$literalExpectation(">=", false),
      peg$c39 = "*",
      peg$c40 = peg$literalExpectation("*", false),
      peg$c41 = "%",
      peg$c42 = peg$literalExpectation("%", false),
      peg$c43 = "/",
      peg$c44 = peg$literalExpectation("/", false),
      peg$c45 = ";",
      peg$c46 = peg$literalExpectation(";", false),
      peg$c47 = "^",
      peg$c48 = peg$literalExpectation("^", false),
      peg$c49 = peg$otherExpectation("operator"),
      peg$c50 = peg$otherExpectation("word"),
      peg$c51 = "[",
      peg$c52 = peg$literalExpectation("[", false),
      peg$c53 = /^[^\]]/,
      peg$c54 = peg$classExpectation(["]"], true, false),
      peg$c55 = "]",
      peg$c56 = peg$literalExpectation("]", false),
      peg$c57 = function(str) {return text()},
      peg$c58 = "\"",
      peg$c59 = peg$literalExpectation("\"", false),
      peg$c60 = /^[^"]/,
      peg$c61 = peg$classExpectation(["\""], true, false),
      peg$c62 = function() {return text()},
      peg$c63 = /^[A-Za-z0-9_$]/,
      peg$c64 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_", "$"], false, false),
      peg$c65 = peg$otherExpectation("system variable"),
      peg$c66 = "@@",
      peg$c67 = peg$literalExpectation("@@", false),
      peg$c68 = peg$otherExpectation("variable"),
      peg$c69 = "@",
      peg$c70 = peg$literalExpectation("@", false),
      peg$c71 = function(n) {return text()},
      peg$c72 = peg$otherExpectation("global temporary table"),
      peg$c73 = "##",
      peg$c74 = peg$literalExpectation("##", false),
      peg$c75 = peg$otherExpectation("temporary table"),
      peg$c76 = "#",
      peg$c77 = peg$literalExpectation("#", false),
      peg$c78 = "null",
      peg$c79 = peg$literalExpectation("NULL", true),
      peg$c80 = peg$otherExpectation("string"),
      peg$c81 = "N",
      peg$c82 = peg$literalExpectation("N", false),
      peg$c83 = /^[^']/,
      peg$c84 = peg$classExpectation(["'"], true, false),
      peg$c85 = function(s) {return s.join('')},
      peg$c86 = function() {return '\''},
      peg$c87 = peg$otherExpectation("number"),
      peg$c88 = /^[0-9]/,
      peg$c89 = peg$classExpectation([["0", "9"]], false, false),
      peg$c90 = "'",
      peg$c91 = peg$literalExpectation("'", false),
      peg$c92 = ".",
      peg$c93 = peg$literalExpectation(".", false),
      peg$c94 = "e",
      peg$c95 = peg$literalExpectation("E", true),
      peg$c96 = /^[ \xA0\u1680\u2000-\u200A\u202F\u205F\u3000]/,
      peg$c97 = peg$classExpectation([" ", "\xA0", "\u1680", ["\u2000", "\u200A"], "\u202F", "\u205F", "\u3000"], false, false),
      peg$c98 = peg$anyExpectation(),
      peg$c99 = peg$otherExpectation("whitespace"),
      peg$c100 = "\t",
      peg$c101 = peg$literalExpectation("\t", false),
      peg$c102 = "\x0B",
      peg$c103 = peg$literalExpectation("\x0B", false),
      peg$c104 = "\f",
      peg$c105 = peg$literalExpectation("\f", false),
      peg$c106 = " ",
      peg$c107 = peg$literalExpectation(" ", false),
      peg$c108 = "\xA0",
      peg$c109 = peg$literalExpectation("\xA0", false),
      peg$c110 = "\uFEFF",
      peg$c111 = peg$literalExpectation("\uFEFF", false),
      peg$c112 = /^[\n\r\u2028\u2029]/,
      peg$c113 = peg$classExpectation(["\n", "\r", "\u2028", "\u2029"], false, false),
      peg$c114 = peg$otherExpectation("end of line"),
      peg$c115 = "\r\n",
      peg$c116 = peg$literalExpectation("\r\n", false),
      peg$c117 = "\n",
      peg$c118 = peg$literalExpectation("\n", false),
      peg$c119 = "\r",
      peg$c120 = peg$literalExpectation("\r", false),
      peg$c121 = "\u2028",
      peg$c122 = peg$literalExpectation("\u2028", false),
      peg$c123 = "\u2029",
      peg$c124 = peg$literalExpectation("\u2029", false),
      peg$c125 = peg$otherExpectation("comment"),
      peg$c126 = "*/",
      peg$c127 = peg$literalExpectation("*/", false),
      peg$c128 = function() {return {multi:text()}},
      peg$c129 = "/*",
      peg$c130 = peg$literalExpectation("/*", false),
      peg$c131 = function(x) {return x},
      peg$c132 = function() {return {single:text()}},
      peg$c133 = "--",
      peg$c134 = peg$literalExpectation("--", false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parsebody() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parsewstoken();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parsewstoken();
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parselintws();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parsewstoken() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parselintws();
    if (s1 !== peg$FAILED) {
      s2 = peg$parsetoken();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1, s2);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parselintws() {
    var s0, s1, s2;

    s0 = [];
    s1 = peg$currPos;
    s2 = peg$parseWhiteSpace();
    if (s2 !== peg$FAILED) {
      peg$savedPos = s1;
      s2 = peg$c2();
    }
    s1 = s2;
    if (s1 === peg$FAILED) {
      s1 = peg$currPos;
      s2 = peg$parseLineTerminatorSequence();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s1;
        s2 = peg$c3();
      }
      s1 = s2;
      if (s1 === peg$FAILED) {
        s1 = peg$currPos;
        s2 = peg$parseComment();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s1;
          s2 = peg$c4();
        }
        s1 = s2;
      }
    }
    while (s1 !== peg$FAILED) {
      s0.push(s1);
      s1 = peg$currPos;
      s2 = peg$parseWhiteSpace();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s1;
        s2 = peg$c2();
      }
      s1 = s2;
      if (s1 === peg$FAILED) {
        s1 = peg$currPos;
        s2 = peg$parseLineTerminatorSequence();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s1;
          s2 = peg$c3();
        }
        s1 = s2;
        if (s1 === peg$FAILED) {
          s1 = peg$currPos;
          s2 = peg$parseComment();
          if (s2 !== peg$FAILED) {
            peg$savedPos = s1;
            s2 = peg$c4();
          }
          s1 = s2;
        }
      }
    }

    return s0;
  }

  function peg$parsetoken() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseliteral();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c5();
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parsesystem_var();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c6(s1);
      }
      s0 = s1;
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseglobaltemp();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c7(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parsetemp();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c8(s1);
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parsevariable();
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c9(s1);
            }
            s0 = s1;
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parsename();
              if (s1 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c10(s1);
              }
              s0 = s1;
              if (s0 === peg$FAILED) {
                s0 = peg$currPos;
                s1 = peg$parselparen();
                if (s1 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c11(s1);
                }
                s0 = s1;
                if (s0 === peg$FAILED) {
                  s0 = peg$currPos;
                  s1 = peg$parserparen();
                  if (s1 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c11(s1);
                  }
                  s0 = s1;
                  if (s0 === peg$FAILED) {
                    s0 = peg$currPos;
                    s1 = peg$parseoperator();
                    if (s1 !== peg$FAILED) {
                      peg$savedPos = s0;
                      s1 = peg$c12(s1);
                    }
                    s0 = s1;
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parselparen() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 40) {
      s0 = peg$c13;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c14); }
    }

    return s0;
  }

  function peg$parserparen() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 41) {
      s0 = peg$c15;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c16); }
    }

    return s0;
  }

  function peg$parseplus() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 43) {
      s0 = peg$c17;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c18); }
    }

    return s0;
  }

  function peg$parseminus() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 45) {
      s0 = peg$c19;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c20); }
    }

    return s0;
  }

  function peg$parsecomma() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 44) {
      s0 = peg$c21;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c22); }
    }

    return s0;
  }

  function peg$parseequals() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 61) {
      s0 = peg$c23;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c24); }
    }

    return s0;
  }

  function peg$parsenot_equals() {
    var s0;

    if (input.substr(peg$currPos, 2) === peg$c25) {
      s0 = peg$c25;
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c26); }
    }
    if (s0 === peg$FAILED) {
      if (input.substr(peg$currPos, 2) === peg$c27) {
        s0 = peg$c27;
        peg$currPos += 2;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c28); }
      }
    }

    return s0;
  }

  function peg$parseampersand() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 38) {
      s0 = peg$c29;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c30); }
    }

    return s0;
  }

  function peg$parselt() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 60) {
      s0 = peg$c31;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c32); }
    }

    return s0;
  }

  function peg$parselte() {
    var s0;

    if (input.substr(peg$currPos, 2) === peg$c33) {
      s0 = peg$c33;
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c34); }
    }

    return s0;
  }

  function peg$parsegt() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 62) {
      s0 = peg$c35;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c36); }
    }

    return s0;
  }

  function peg$parsegte() {
    var s0;

    if (input.substr(peg$currPos, 2) === peg$c37) {
      s0 = peg$c37;
      peg$currPos += 2;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c38); }
    }

    return s0;
  }

  function peg$parseasterisk() {
    var s0;

    if (input.charCodeAt(peg$currPos) === 42) {
      s0 = peg$c39;
      peg$currPos++;
    } else {
      s0 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c40); }
    }

    return s0;
  }

  function peg$parsepercent() {
    var s0;
